Fix layout issues in poco.css
Adjusted margin-left for menu-toggle and added height to header.

--- a/poco.css
+++ b/poco.css
@@ -2388,7 +2388,7 @@ margin-right: 130px;
 
   .menu-toggle {
     display: flex;
-      margin-left:-2rem;
+      margin-left:2rem;
 
   }
   .menu-toggle span{
@@ -2423,11 +2423,12 @@ border-radius:10px ;
     display:none;
     position:fixed;
       z-index:1000;
-
+  height:15vh;
       margin-top:3rem;
   }
   .header3.active{
     display:flex;
+      flex-direction:column;
   }
    .header-top {
         padding: 40px;
